<resources>
    <string name="app_name">屏幕录制</string>

    <string name="navigation_drawer_open">打开导航抽屉</string>
    <string name="navigation_drawer_close">关闭导航抽屉</string>

    <string name="action_market">到应用市场</string>

    <string name="action_settings">Settings</string>
    <string name="iv_video_thumb">录制的视频的缩略图</string>
    <string name="hint_video_name">2015年6月24日 上午1：03：45</string>
    <string name="btn_share">分享</string>
    <string name="btn_delete">删除</string>
    <string name="dialog_scan_video">扫描视频文件……</string>
    <string name="activity_videoplayer">视频播放</string>

    <string-array name="drawer_items_text">
        <item>我的视频</item>
        <item>Gif制作</item>
        <item>视频剪辑</item>
        <item>App设置</item>
        <item>反馈与帮助</item>
    </string-array>
    <string-array name="drawer_items_icon">
        <item>@drawable/ic_local_movies_black_24dp</item>
        <item>@drawable/ic_gif_black_24dp</item>
        <item>@drawable/ic_content_cut_black_24dp</item>
        <item>@drawable/ic_settings_black_24dp</item>
        <item>@drawable/ic_feedback_black_24dp</item>
    </string-array>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="demo_min_label">最小值</string>
    <string name="demo_max_label">最大值</string>
    <string name="settings_other">其他</string>
    <string name="settings_use_intenal_player_tit">内置媒体播放器</string>
    <string name="settings_use_intenal_player_sum">使用内置媒体播放器播放录制的视频和音频</string>
    <string name="settings_update">更新</string>
    <string name="settings_update_sum">接受本应用的更新，新特性的推送</string>
    <string name="about_and_help_titile">版本1.0</string>
    <string name="settins_record">录制</string>
    <string name="recording_folder_title">存储位置</string>
    <string name="recording_folder_sum">选择一个文件夹来存放媒体文件</string>
    <string name="record_sound_title">录制声音</string>
    <string name="record_sound_sum">选择是否在录制屏幕的同时也录制声音。如果录制声音，在生成视频的时候会花更长一点的时间</string>
    <string name="stop_onscreen_off_title">锁屏时暂停</string>
    <string name="stop_onscreen_off_sum">当屏幕被锁定时，则暂停屏幕录制</string>
    <string name="stop_on_shake_title">摇一摇</string>
    <string name="stop_on_shake_sum">设置当屏幕录制时摇一摇即可停止录制</string>
    <string name="show_touch_title">显示触摸操作</string>
    <string name="show_touch_sum">为触摸操作提供视觉提示</string>
    <string name="notification_recording">录制……</string>
    <string name="notification_stop">停止</string>
    <string name="notification_edit">绘制</string>
    <string name="video_empty_description">\t\t在本app的视频存放目录中没有扫描到任何视频，你可以点击录制按钮开始录制。如果你不知道怎么使用本app，可以点击观看视频按钮收看教程</string>
    <string name="btn_course_watch">视频教程观看</string>
    <string name="action_clear">清除</string>
    <string name="action_save">保存</string>
    <string name="title_activity_gifmaker">Gif制作</string>
</resources>
